# ynab-api

./: Cargo.toml  README.md
.openapi-generator/: FILES
data/: spec-v1-swagger.json
docs/: Account.md  AccountsApi.md  BudgetSummary.md  BudgetsApi.md  CategoriesApi.md  Category.md  DeprecatedApi.md  MonthsApi.md  Payee.md  PayeeLocationsApi.md  PayeesApi.md  SaveAccount.md  SaveAccountWrapper.md  SaveSubTransaction.md  SaveTransaction.md  ScheduledTransactionsApi.md  SubTransaction.md  TransactionsApi.md  UpdateTransaction.md  UserApi.md
src/apis/: accounts_api.rs  budgets_api.rs  categories_api.rs  configuration.rs  deprecated_api.rs  mod.rs  months_api.rs  payee_locations_api.rs  payees_api.rs  scheduled_transactions_api.rs  transactions_api.rs  user_api.rs
src/models/: account.rs  account_response.rs  account_response_data.rs  accounts_response.rs  accounts_response_data.rs  budget_detail.rs  budget_detail_all_of.rs  budget_detail_response.rs  budget_detail_response_data.rs  budget_settings.rs  budget_settings_response.rs  budget_settings_response_data.rs  budget_summary.rs  budget_summary_response.rs  budget_summary_response_data.rs  bulk_response.rs  bulk_response_data.rs  bulk_response_data_bulk.rs  bulk_transactions.rs  categories_response.rs  categories_response_data.rs  category.rs  category_group.rs  category_group_with_categories.rs  category_group_with_categories_all_of.rs  category_response.rs  category_response_data.rs  currency_format.rs  date_format.rs  error_detail.rs  error_response.rs  hybrid_transaction.rs  hybrid_transaction_all_of.rs  mod.rs  (+55 more)
