[package]
name = "ynab-api"
version = "4.0.0"
authors = ["Jesse Luehrs <doy@tozt.net>", "You Need A Budget, LLC"]
description = "OpenAPI-generated API bindings for the YNAB API"
repository = "https://git.tozt.net/ynab-api"
license = "Apache-2.0"

edition = "2018"

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
url = "2.2.2"
[dependencies.reqwest]
version = "0.11.3"
features = ["json", "multipart"]

[dev-dependencies]
